[tool.poetry]
name = "ziaxmorph"
version = "0.1.0"
description = ""
authors = ["Stepan Bakshayev"]

[tool.poetry.dependencies]
python = "^3.7"
pymorphy2 = "^0.9.1"
pymorphy2-dicts-ru = "^2.4.417127"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
